# learning-c-17

./: .gitignore  01-02-init.cpp  CMakeLists.txt  Makefile  Readme.md  hello.cpp
src/ch1/: 01-03-auto-templates.cpp  01-04-template-sum.cpp  01-05-range-match.cpp  01-06-insert-all.cpp
src/ch2/: 02-01-erase-idiom.cpp
src/cpp-17-cookbook/ch1/: 01-01-unpack.cpp  01-07-check-range.cpp
src/cpp-17-cookbook/ch2/: 02-02-efficiently-modifying-map-keys.cpp  02-03-unordered-map-custom-types.cpp  02-04-inputstream-with-iterator.cpp  02-05-calculator-with-stack.cpp  02-06-work-counter-map.cpp  02-07-multimap-writing-style-helper.cpp  de-bello-gallico.txt
src/hands-on-system-prog/: 2020-03-16-00-raii-with-simple-class.cpp  2020-03-16-01-raii-with-file.cpp  2020-03-17-00-gsl-pointer-arith.cpp  2020-03-19-00-contracts.cpp  2020-03-19-01-contracts.cpp  2020-03-19-02-gls-owner.cpp
